objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/AcctSeed__Uncleared_Bank_Reconciliation_Line__c.object-meta.xml
<CustomObject>
    <description>Used to relate uncleared source documents with a Bank Reconciliation.</description>
    <label>Uncleared Bank Reconciliation Line</label>
    <nameField>
        <displayFormat>UBRL-{00000}</displayFormat>
        <label>Uncleared Bank Reconciliation Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Uncleared Bank Reconciliation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>