objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/fields/AcctSeed__Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Amount__c</fullName>
    <description>The amount associated with this record.</description>
    <inlineHelpText>The amount associated with this record. The amount is transcribed from the associated source document.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>