objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/fields/AcctSeed__Bank_Deposit__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Bank Deposit  associated with this record.</description>
    <inlineHelpText>The Bank Deposit  associated with this record.</inlineHelpText>
    <label>Bank Deposit</label>
    <referenceTo>AcctSeed__Bank_Deposit__c</referenceTo>
    <relationshipLabel>Uncleared Bank Reconciliation Lines</relationshipLabel>
    <relationshipName>Uncleared_Bank_Reconciliation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>