objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/fields/AcctSeed__Bank_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Reconciliation__c</fullName>
    <description>Records the associated Bank Reconciliation.</description>
    <inlineHelpText>Records the associated Bank Reconciliation.</inlineHelpText>
    <label>Bank Reconciliation</label>
    <referenceTo>AcctSeed__Bank_Reconciliation2__c</referenceTo>
    <relationshipLabel>Uncleared Bank Reconciliation Lines</relationshipLabel>
    <relationshipName>Uncleared_Bank_Reconciliation_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>