objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/fields/AcctSeed__Cash_Receipt__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Cash_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Cash Receipt  associated with this record.</description>
    <inlineHelpText>The Cash Receipt  associated with this record.</inlineHelpText>
    <label>Cash Receipt</label>
    <referenceTo>AcctSeed__Cash_Receipt__c</referenceTo>
    <relationshipLabel>Uncleared Bank Reconciliation Lines</relationshipLabel>
    <relationshipName>Uncleared_Bank_Reconciliation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>