objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/fields/AcctSeed__Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>