objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/fields/AcctSeed__Journal_Entry_Line__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Journal_Entry_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Journal Entry Line  associated with this record.</description>
    <inlineHelpText>The Journal Entry Line  associated with this record.</inlineHelpText>
    <label>Journal Entry Line</label>
    <referenceTo>AcctSeed__Journal_Entry_Line__c</referenceTo>
    <relationshipLabel>Uncleared Bank Reconciliation Lines</relationshipLabel>
    <relationshipName>Uncleared_Bank_Reconciliation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>