objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/fields/AcctSeed__Payee_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_Id__c</fullName>
    <label>Payee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>