objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/fields/AcctSeed__Reference__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Reference__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>