objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c/fields/AcctSeed__Related_Source_Document__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Related_Source_Document__c</fullName>
    <description>Records the associated source document the Uncleared Bank Reconciliation Line captures.</description>
    <inlineHelpText>The name of the source document associated with this Uncleared Bank Reconciliation Line. This is a system populated field.</inlineHelpText>
    <label>Related Source Document</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>